4 incidencias resueltas